--- a/TP-Figure-Composition/CodeTdTp-Start.vcxproj
+++ b/TP-Figure-Composition/CodeTdTp-Start.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="TP-Figure-Composition\testRct.cpp" />
     <ClCompile Include="TP-Figure-Composition\main.cpp" />
     <ClCompile Include="TP-Figure-Composition\testTsgt.cpp" />
+    <ClCompile Include="TP-Figure-Composition\testTsgtStack.cpp" />
     <ClCompile Include="TP-Figure-Composition\tSgt.cpp" />
     <ClCompile Include="TP-Figure-Composition\tSgtStack.cpp" />
   </ItemGroup>
